@@ -9,17 +9,8 @@ import wx
 from .controls_subpanel import SubPanel
 
 # These are values hidden in the user interface
-HIDDEN = ["shutter time",
-          "video frameoffset",
-          "bin ops",
-          "blur",
-          "diff_method",
-          "margin",
-          "shutter time",
-          "tap code",
-          "tap mode",
-          "x-pos",
-          "y-pos",
+HIDDEN = ["exposure time",
+          "video frame offset",
           ]
 
 
@@ -33,10 +24,10 @@ class SubPanelInfo(SubPanel):
 
         # Create three boxes containing information
         sizer = wx.BoxSizer(wx.HORIZONTAL)
-        genbox = self._box_from_cfg_read(analysis, "General", ignore=HIDDEN)
-        imbox = self._box_from_cfg_read(analysis, "Image", ignore=HIDDEN)
-        frbox = self._box_from_cfg_read(analysis, "Framerate", ignore=HIDDEN)
-        roibox = self._box_from_cfg_read(analysis, "ROI", ignore=HIDDEN)
+        genbox = self._box_from_cfg_read(analysis, "experiment", ignore=HIDDEN)
+        imbox = self._box_from_cfg_read(analysis, "imaging", ignore=HIDDEN)
+        frbox = self._box_from_cfg_read(analysis, "setup", ignore=HIDDEN)
+        roibox = self._box_from_cfg_read(analysis, "online_filter", ignore=HIDDEN)
         # same size 
         h = genbox.GetMinSize()[1]
         h = max(h, imbox.GetMinSize()[1])
